--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ header {
 
 .my-services {
     background-color: var(--clr-dark);
-    background-image: url('/windows-C6T6vr1sQI0-unsplash.jpg');
+    background-image: url('./windows-C6T6vr1sQI0-unsplash.jpg');
     background-size: cover;
     background-attachment: fixed;
     background-blend-mode: multiply;
